opam-version: "2.0"
maintainer: "Ahrefs Pte Ltd <github@ahrefs.com>"
authors: [ "Ahrefs Pte Ltd <github@ahrefs.com>" ]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/ahrefs/ocaml-ceph"
dev-repo: "git://github.com/ahrefs/ocaml-ceph.git"
bug-reports: "https://github.com/ahrefs/ocaml-ceph/issues"
tags: [ "org:ahrefs" "clib:stdc" "clib:cephfs"  ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]
depends: [
  "ocaml"
  "dune"
  "odoc" {with-doc}
  "ctypes"
]
depexts: [
  ["libcephfs-dev"] {os-family = "debian"}
]
synopsis: "Bindings to libcephfs"
description: "Bindings to Ceph distributed file system client library"
