; generate data types via Cstubs_structs

(library
  (name structs)
  (public_name ceph.structs)
  (wrapped false)
  (modules structs)
  (libraries ctypes.stubs)
)

(executable
  (name gen_structs_c)
  (modules gen_structs_c)
  (libraries ctypes ctypes.stubs structs)
)

(rule
  (targets "gen_structs.c")
  (action (with-stdout-to %{targets} (run ./gen_structs_c.exe)))
  (deps gen_structs_c.exe)
)

(executable
  (name gen_structs)
  (modules gen_structs)
  (foreign_stubs (language c) (names gen_structs))
  (libraries ctypes)
)

(rule
  (targets "structs_generated.ml")
  (action (with-stdout-to %{targets} (run ./gen_structs.exe)))
  (deps gen_structs.exe)
)

; generate functions

(library
  (name stubs)
  (public_name ceph.stubs)
  (wrapped false)
  (modules bindings structs_generated)
  (flags :standard -w -9-27)
  (libraries
    ctypes
    structs
  )
)

(executable
  (name gen)
  (modules gen)
  (libraries
    ctypes
    ctypes.stubs
    stubs
  )
)

(rule
  (targets "generated.ml")
  (action (with-stdout-to %{targets} (run ./gen.exe ml)))
  (deps gen.exe)
)

(rule
  (targets "generated.c")
  (action (with-stdout-to %{targets} (run ./gen.exe c)))
  (deps gen.exe)
)

; public library

(library
  (name ceph)
  (public_name ceph)
  (modules :standard \ gen bindings structs gen_structs gen_structs_c structs_generated)
  (libraries
    ctypes
    stubs
  )
  (foreign_stubs (language c) (names generated))
  (c_library_flags -lcephfs)
)
